--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8" />
     <link rel="icon" href="https://media.githubusercontent.com/media/sschepis/observing-universe/main/public/favicon.ico" />
 
-    <meta name="title" content="The Observing Universe - A Radical New Perspective on Observation">
+    <meta name="title" content="Remembering Source - Rememberance of the Coherent Integral">
 
-    <meta name="description" content="Explore a groundbreaking viewpoint on the role of observation in physics and consciousness in this fascinating book.">
+    <meta name="description" content="A channeled message from Source about the nature of the Coherent Integral process.">
 
     <meta name="author" content="Sebastian Schepis">
 
-    <meta name="keywords" content="physics, quantum physics, consciousness, observation, observer effect, entropy, information, philosophy, ethics, quantum computing, AGI">
+    <meta name="keywords" content="spirituality, new age, metaphysics, consciousness, physics, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory, quantum mechanics, quantum physics, quantum field theory, quantum field, quantum, quantum theory">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-    <meta property="og:title" content="The Observing Universe">
+    <meta property="og:title" content="Remembering Source">
     <meta property="og:type" content="book">
-    <meta property="og:url" content="https://observinguniverse.com">
+    <meta property="og:url" content="https://rememberingsource.com">
     <meta property="og:image" content="https://media.githubusercontent.com/media/sschepis/observing-universe/main/public/images/cover.png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@ObservingUniv"> 
-    <meta name="twitter:title" content="The Observing Universe">
-    <meta name="twitter:description" content="Explore a radical new perspective on the role of observation in physics and consciousness.">
+    <meta name="twitter:site" content="@sebschepis"> 
+    <meta name="twitter:title" content="Remembering Source">
+    <meta name="twitter:description" content="A channeled message from Source about the nature of the Coherent Integral process.">
     <meta name="twitter:image" content="https://media.githubusercontent.com/media/sschepis/observing-universe/main/public/images/cover.png">
 
     <link rel="apple-touch-icon" href="https://media.githubusercontent.com/media/sschepis/observing-universe/main/public/logo192.png" />
@@ -40,17 +40,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Observing Universe - How Consciousness Creates Reality</title>
+    <title>Remembering Source - Rememberance of the Coherent Integral</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FE35PKV1TF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-FE35PKV1TF');
-</script>
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0R07GVCHM9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-0R07GVCHM9');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
